--- a/index.html
+++ b/index.html
@@ -40,19 +40,18 @@
 
 <p><em>This is in development and is not recommended to develop with as a base until version 0.0.1.</em></p>
 
-<p>This project is an application skeleton, influenced by and forked from angular-seed,
+<p>This project is an application skeleton, influenced by the angular-seed,
 <a href="https://github.com/angular/angular-seed">https://github.com/angular/angular-seed</a>
-It provides a Three D metaphor with sample page and use scenarios.</p>
+It uses <a href="http://threejs.org/">three.js</a> to provide a means to map 2D Web content to 3D space.</p>
 
-<p>The application is preconfigured to install the Angular framework, three.js, d3, less,
-and required third-party frameworks. The seed app provides navigation and transition 
-functionality, API-powered 3D content panes, as well as development and testing tools.</p>
+<p>The application is preconfigured to install the Angular framework, three.js, 
+and required third-party frameworks. The seed app contains video, Leaflet map tiles, SVG and HTML content, built on top of bootstrap, JQuery, less and other familiar frameworks. It also includes unit and e2e tests.</p>
 
 <h3>
 <a id="prerequisites" class="anchor" href="#prerequisites" aria-hidden="true"><span class="octicon octicon-link"></span></a>Prerequisites</h3>
 
 <p>You must have node.js and its package manager (npm) installed. All other dependencies
-are managed by node through package.json, and then bower thrugh bower.json. You can 
+are managed by node through package.json, and then bower through bower.json. You can 
 get node and npm from <a href="http://nodejs.org/">http://nodejs.org/</a>.</p>
 
 <h3>
@@ -93,45 +92,44 @@ and then populate them with imported code:</p>
 <h3>
 <a id="run-the-application" class="anchor" href="#run-the-application" aria-hidden="true"><span class="octicon octicon-link"></span></a>Run the Application</h3>
 
-<p>The application can be tested in localhost:8000 by running npm start</p>
+<p>The application should be testable in localhost:3000 by running npm start. If that port is already being used, look at the console to see which port that the application found available.</p>
 
 <pre><code>npm start
 </code></pre>
 
-<p>The app should now be running at <code>http://localhost:8000/app/</code>. The most typical
+<p>The app should now be running at <code>http://localhost:3000/app/</code> (or an alternative that was found to be available at runtime). </p>
+
+<h3>
+<a id="trouble-shooting" class="anchor" href="#trouble-shooting" aria-hidden="true"><span class="octicon octicon-link"></span></a>Troubleshooting</h3>
+
+<p>The most typical
 problems in npm start involve permission issues, availability of port, and 
 software availability. Ensure that you have the correct software installed to begin, 
 and that the directory in which you are running npm start contains the bob-angular 
-seed files. </p>
+seed files. Consult your console, and Google, to take care of any issues unique to your system.</p>
 
-<h4>
-<a id="port-8000-availability" class="anchor" href="#port-8000-availability" aria-hidden="true"><span class="octicon octicon-link"></span></a>Port 8000 Availability</h4>
 
-<p>Edit line 23 of package.json so that the 8000 port is changed to the one you wish
-to use.</p>
-
-<pre><code>    "start": "http-server -a localhost -p 8000 -c-1",
-</code></pre>
 
 <h2>
 <a id="directory-layout" class="anchor" href="#directory-layout" aria-hidden="true"><span class="octicon octicon-link"></span></a>Directory Layout</h2>
 
-<pre><code>app/                                   --&gt; all of the source files for the application
-  assets/                              --&gt; asset and creation media, CSS JS, JSON files
+<pre><code>index.js                               --&gt; the file containing the webserver
+app/                                   --&gt; application source files
+  assets/                              --&gt; media, CSS JS, JSON assets
     css, js, media
   components/                          --&gt; view or feature based components
-    footer, main, media, navigation    --&gt; view components
-    youtube, leaflet                   --&gt; feature (vendor) based components
-  shared/                              --&gt; feature based shared components (services)
-    three_module                       --&gt; angular three service used by view pontts 
-  libs/                                --&gt; the repository for bower installed JS files
-    3l, angular, bootstrap, three.js,  --&gt; bower-maintained source files created after
-    jquery, less, ui-router, others        running 'npm start' or 'bower install' 
+    footer, main, context, navigation  --&gt; view components
+    youtube, leaflet, svg              --&gt; feature (vendor) based components
+  shared/                              --&gt; feature based shared services
+    three_module, country_module        
+  libs/                                --&gt; repository for bower-created 
+    3l, angular, bootstrap, three.js,      source files from 'npm start' or  
+    jquery, less, ui-router, others        'bower install' 
   app.js                               --&gt; main application module
   index.html                           --&gt; the entrace point to the app.
+karma.conf.js                          --&gt; config file for Karma unit tests 
 TODO:
-  index-async.html                     --&gt; index.html with asynchronous JavaScript loads
-karma.conf.js                          --&gt; config file for running unit tests with Karma
+  index-async.html                     --&gt; index.html with asynchronous loads
 e2e-tests/                             --&gt; end-to-end tests
 </code></pre>
 
