--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h3>
 <a id="version-000" class="anchor" href="#version-000" aria-hidden="true"><span class="octicon octicon-link"></span></a>version 0.0.0</h3>
 
-<p><em>This is in development and is not recommended to develop with as a base until version 0.0.1.</em></p>
+<p><em>This is in development and is not recommended to use in production as a base until version 0.0.1.</em></p>
 
 <p>This project is an application skeleton, influenced by the angular-seed,
 <a href="https://github.com/angular/angular-seed">https://github.com/angular/angular-seed</a>
