--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
       <section>
         <div id="title">
-          <h1>bob-angular</h1>
-          <p>An evolving angular-three.js seed</p>
+          <h1>KevinEveryhwhere</h1>
+          <p>the github pages of kevin ready</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/KevinEverywhere">KevinEverywhere</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
@@ -38,113 +38,12 @@
         <h3>
 <a id="version-000" class="anchor" href="#version-000" aria-hidden="true"><span class="octicon octicon-link"></span></a>version 0.0.0</h3>
 
-<p><em>This is in development and is not recommended to use in production as a base until version 0.0.1.</em></p>
+<p>Welcome to my Github Pages</p>
 
-<p>This project is an application skeleton, influenced by the angular-seed,
-<a href="https://github.com/angular/angular-seed">https://github.com/angular/angular-seed</a>
-It uses <a href="http://threejs.org/">three.js</a> to provide a means to map 2D Web content to 3D space.</p>
-
-<p>The application is preconfigured to install the Angular framework, three.js, 
-and required third-party frameworks. The seed app contains video, Leaflet map tiles, SVG and HTML content, built on top of bootstrap, JQuery, less and other familiar frameworks. It also includes unit and e2e tests.</p>
-
-<h3>
-<a id="prerequisites" class="anchor" href="#prerequisites" aria-hidden="true"><span class="octicon octicon-link"></span></a>Prerequisites</h3>
-
-<p>You must have node.js and its package manager (npm) installed. All other dependencies
-are managed by node through package.json, and then bower through bower.json. You can 
-get node and npm from <a href="http://nodejs.org/">http://nodejs.org/</a>.</p>
-
-<h3>
-<a id="clone-bob-angular" class="anchor" href="#clone-bob-angular" aria-hidden="true"><span class="octicon octicon-link"></span></a>Clone bob-angular</h3>
-
-<p>In the terminal, in the directory where you want to install the app, git clone the 
-bob-angular repository. Then, run <em>npm start</em> to install and launch the node 
-web server; or <em>npm install</em> and <em>bower install</em> to merely install the application
-dependencies. </p>
-
-<p><em>Permission issues may occur if the directory permission and user permissions are different.</em></p>
-
-<pre><code>git clone https://github.com/KevinEverywhere/bob-angular.git
-cd bob-angular
-npm start 
-</code></pre>
-
-<h3>
-<a id="install-dependencies" class="anchor" href="#install-dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install Dependencies</h3>
-
-<p>There are server-side, application and testing dependencies loaded in  <code>npm</code>, 
-the <a href="https://www.npmjs.org/">node package manager</a>, and in the front-end development dependencies
-through <code>bower</code>, a <a href="http://bower.io">client-side code package manager</a>.</p>
-
-<p>The npm install and npm start scripts will install two new directories, 
-and then populate them with imported code:</p>
-
-<ul>
-<li>
-<code>node_modules</code> - contains the npm packages for the tools we need</li>
-<li>
-<code>app/libs</code> - contains the angular framework files</li>
-</ul>
-
-<p>*The <code>libs</code> folder is put into the app folder  through the <code>.bowerrc</code> file when 
-'bower install' is run.</p>
-
-<h3>
-<a id="run-the-application" class="anchor" href="#run-the-application" aria-hidden="true"><span class="octicon octicon-link"></span></a>Run the Application</h3>
-
-<p>The application should be testable in localhost:3000 by running npm start. If that port is already being used, look at the console to see which port that the application found available.</p>
-
-<pre><code>npm start
-</code></pre>
-
-<p>The app should now be running at <code>http://localhost:3000/app/</code> (or an alternative that was found to be available at runtime). </p>
-
-<h3>
-<a id="trouble-shooting" class="anchor" href="#trouble-shooting" aria-hidden="true"><span class="octicon octicon-link"></span></a>Troubleshooting</h3>
-
-<p>The most typical
-problems in npm start involve permission issues, availability of port, and 
-software availability. Ensure that you have the correct software installed to begin, 
-and that the directory in which you are running npm start contains the bob-angular 
-seed files. Consult your console, and Google, to take care of any issues unique to your system.</p>
-
-
-
-<h2>
-<a id="directory-layout" class="anchor" href="#directory-layout" aria-hidden="true"><span class="octicon octicon-link"></span></a>Directory Layout</h2>
-
-<pre><code>index.js                               --&gt; the file containing the webserver
-app/                                   --&gt; application source files
-  assets/                              --&gt; media, CSS JS, JSON assets
-    css, js, media
-  components/                          --&gt; view or feature based components
-    footer, main, context, navigation  --&gt; view components
-    youtube, leaflet, svg              --&gt; feature (vendor) based components
-  shared/                              --&gt; feature based shared services
-    three_module, country_module        
-  libs/                                --&gt; repository for bower-created 
-    3l, angular, bootstrap, three.js,      source files from 'npm start' or  
-    jquery, less, ui-router, others        'bower install' 
-  app.js                               --&gt; main application module
-  index.html                           --&gt; the entrace point to the app.
-karma.conf.js                          --&gt; config file for Karma unit tests 
-TODO:
-  index-async.html                     --&gt; index.html with asynchronous loads
-e2e-tests/                             --&gt; end-to-end tests
-</code></pre>
-
-<h2>
-<a id="testing" class="anchor" href="#testing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Testing</h2>
-
-<p>There will be two kinds of tests in the bob-angular seed application: Unit tests and End to End tests.</p>
-
-<p>This section will be expanded as the content is updated and made available for view and testing.</p>
-
-<h2>
-<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h2>
-
-<p>For more information on bob-angular please contact <a href="mailto:kevin@planetkevin.com">kevin@planetkevin.com</a></p>
-      </section>
+<p>
+For the moment, there is only one thing to look at: 
+<a href="http://kevineverywhere.github.io/bob-angular/">bob-angular</a>, an angular-three.js seed.
+</p>
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
