--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!--[if lt IE 8]>
     <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
+    <style type="text/css">#version-000{float:right;}</style>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   </head>
@@ -28,7 +29,7 @@
 
       <section>
         <div id="title">
-          <h1>KevinEveryhwhere</h1>
+          <h1>KevinEverywhere</h1>
           <p>the github pages of kevin ready</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/KevinEverywhere">KevinEverywhere</a></span>
@@ -41,8 +42,17 @@
 <p>Welcome to my Github Pages</p>
 
 <p>
-For the moment, there is only one thing to look at: 
+My current project: 
 <a href="http://kevineverywhere.github.io/bob-angular/">bob-angular</a>, an angular-three.js seed.
+</p>
+<p>
+The sample application uses angular, with less, bootstrap, jquery, three, d3, leaflet, and other libraries to enable the mapping of 2d Web to 3d surfaces. 
+</p>
+<p>
+  For a long time, I have been wanting to see a simple way of using a little 3D as needed. Over the last few years, as more and more hardware accelerated devices have moved to support HTML5 standards, CSS3 and JavaScript, what used to once take rendering farms of dedicated machines occurs in realtime on phones and tablets. 
+</p>
+<p>
+  Using <a href="http://threejs.org/">three.js</a>, and the <a href="https://github.com/mrdoob/three.js/blob/master/examples/js/renderers/CSS3DRenderer.js">CSS3DRenderer</a>, both by <a href="https://twitter.com/mrdoob">Ricardo Cabello</a>, distinct content types--video, map tiles, svg and html--are renderable in 3D space. Although this is merely the tip of the iceberg where 3D and 2D can meet on the Web, typical use case scenarios for 3D in Web content are for simple plane constructions.  
 </p>
 
     </div>
