--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>bob-angular by KevinEverywhere</title>
+    <title>KevinEverywhere's Github Pages</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -42,14 +42,13 @@
 <p>Welcome to my Github Pages</p>
 
 <p>
-My current project: 
-<a href="http://kevineverywhere.github.io/bob-angular/">bob-angular</a>, an angular-three.js seed.
+My current project, 
+<a href="http://kevineverywhere.github.io/bob-angular/">bob-angular</a>, an angular-three.js seed, can be seen in a sample application <a href="http://bob-angular.herokuapp.com/">here</a>.
+</p>
+<p>The github files include a package.json, bower.json and testing packages. The application itself uses angular, with less, bootstrap, jquery, three, d3, leaflet, and other libraries to enable the mapping of 2d Web to 3d surfaces. 
 </p>
 <p>
-The sample application uses angular, with less, bootstrap, jquery, three, d3, leaflet, and other libraries to enable the mapping of 2d Web to 3d surfaces. 
-</p>
-<p>
-  For a long time, I have been wanting to see a simple way of using a little 3D as needed. Over the last few years, as more and more hardware accelerated devices have moved to support HTML5 standards, CSS3 and JavaScript, what used to once take rendering farms of dedicated machines occurs in realtime on phones and tablets. 
+  As more and more hardware accelerated devices have moved to support HTML5 standards, CSS3 and JavaScript, what used to once take rendering farms of dedicated CPUs occurs in realtime on phones and tablets. Current HTML content is able to be rendered at runtime in 3D environment with open source software.
 </p>
 <p>
   Using <a href="http://threejs.org/">three.js</a>, and the <a href="https://github.com/mrdoob/three.js/blob/master/examples/js/renderers/CSS3DRenderer.js">CSS3DRenderer</a>, both by <a href="https://twitter.com/mrdoob">Ricardo Cabello</a>, distinct content types--video, map tiles, svg and html--are renderable in 3D space. Although this is merely the tip of the iceberg where 3D and 2D can meet on the Web, typical use case scenarios for 3D in Web content are for simple plane constructions.  
