new index pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--[if lt IE 8]>
     <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
-    <style type="text/css">#version-000{float:right;}</style>
+    <style type="text/css">.rightAlign{float:right;}</style>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   </head>
@@ -36,7 +36,7 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <h3>
+        <h3 class="rightAlign">
 <a id="version-000" class="anchor" href="#version-000" aria-hidden="true"><span class="octicon octicon-link"></span></a>version 0.0.0</h3>
 
 <p>Welcome to my Github Pages</p>
