--- a/index.html
+++ b/index.html
@@ -51,8 +51,17 @@ My current project,
   As more and more hardware accelerated devices have moved to support HTML5 standards, CSS3 and JavaScript, what used to once take rendering farms of dedicated CPUs occurs in realtime on phones and tablets. Current HTML content is able to be rendered at runtime in 3D environment with open source software.
 </p>
 <p>
-  Using <a href="http://threejs.org/">three.js</a>, and the <a href="https://github.com/mrdoob/three.js/blob/master/examples/js/renderers/CSS3DRenderer.js">CSS3DRenderer</a>, both by <a href="https://twitter.com/mrdoob">Ricardo Cabello</a>, distinct content types--video, map tiles, svg and html--are renderable in 3D space. Although this is merely the tip of the iceberg where 3D and 2D can meet on the Web, typical use case scenarios for 3D in Web content are for simple plane constructions.  
+  Using <a href="http://threejs.org/">three.js</a>, and the <a href="https://github.com/mrdoob/three.js/blob/master/examples/js/renderers/CSS3DRenderer.js">CSS3DRenderer</a>, both by <a href="https://twitter.com/mrdoob">Ricardo Cabello</a>, distinct content types--video, map tiles, svg and html--are renderable in 3D space. Although this is merely the tip of the iceberg where 3D and 2D can meet on the Web, many of the most typical use case scenarios for 3D in Web content are simple plane constructions. 
 </p>
+<p>
+Follow me on Github: 
+</p>
+
+<div class="rightAlign">
+
+<iframe src="http://ghbtns.com/github-btn.html?user=your_github_username&repo=your_repository_name&type=follow"
+  allowtransparency="true" frameborder="0" scrolling="0" width="132" height="20"></iframe>
+</div>
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
