new index pages

--- a/index.html
+++ b/index.html
@@ -57,13 +57,11 @@ My current project,
 Follow me on Github: 
 </p>
 
-<div class="rightAlign">
 
-<iframe src="http://ghbtns.com/github-btn.html?user=your_github_username&repo=your_repository_name&type=follow"
-  allowtransparency="true" frameborder="0" scrolling="0" width="132" height="20"></iframe>
+<iframe src="http://ghbtns.com/github-btn.html?user=KevinEverywhere&repo=bob-angular&size=large&type=follow"
+  allowtransparency="true" frameborder="0" scrolling="0" width="225" height="30"></iframe>
 </div>
 
-    </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
