Update index page.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 My current project, 
 <a href="http://kevineverywhere.github.io/bob-angular/">bob-angular</a>, an angular-three.js seed, can be seen in a sample application <a href="http://bob-angular.herokuapp.com/">here</a>.
 </p>
-<p>The github files include a package.json, bower.json and testing packages. The application itself uses angular, with less, bootstrap, jquery, three, d3, leaflet, and other libraries to enable the mapping of 2d Web to 3d surfaces. 
+<p>The github files include package.json and bower.json for installing requied libraries, as well as karmau unit tests and jasmine e2e tests. The application itself uses angular, with less, bootstrap, jquery, three, d3, leaflet, and other libraries to enable the mapping of 2d Web to 3d surfaces. 
 </p>
 <p>
   As more and more hardware accelerated devices have moved to support HTML5 standards, CSS3 and JavaScript, what used to once take rendering farms of dedicated CPUs occurs in realtime on phones and tablets. Current HTML content is able to be rendered at runtime in 3D environment with open source software.
