updated to reflect the new repository.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <p>
 My current project, 
-<a href="http://kevineverywhere.github.io/bob-angular/">bob-angular</a>, an angular-three.js seed, can be seen in a sample application <a href="http://bob-angular.herokuapp.com/">here</a>.
+<a href="http://kevineverywhere.github.io/bob-angular/">bob-angular</a>, an angular-three.js seed, can be seen in a sample application <a href="http://bob-angular.herokuapp.com/">here</a>. 
 </p>
 <p>The github files include package.json and bower.json for installing required libraries, as well as karma unit tests and protractor e2e tests. The application itself uses angular, three, less, bootstrap, jquery, d3, leaflet, and other libraries to enable the mapping of 2d Web to 3d surfaces. 
 </p>
@@ -51,7 +51,8 @@ My current project,
   The secret sauce making the mapping possible are <a href="http://threejs.org/">three.js</a>, and its associated <a href="https://github.com/mrdoob/three.js/blob/master/examples/js/renderers/CSS3DRenderer.js">CSS3DRenderer</a>, both by <a href="https://twitter.com/mrdoob">Ricardo Cabello</a>. 
 </p>
 <p>
-  Although this is merely the tip of the iceberg where 3D and 2D can meet on the Web, many of the most typical use case scenarios for 3D in Web content are simple plane constructions. Other 3D objects will be used in future component development.
+For those only interested in the client-side application who would rather avoid command line installations, check out the <a href="http://kevineverywhere.github.io/bob-angular-app">bob-angular-app</a> repository. The bob-angular-app contains the angular/three.js application seed, is made up of static files and does not have a server-side or node component.
+
 </p>
 <p>
 Follow me on Github: 
