Initial training materials for bob-angular.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 My current project, 
 <a href="http://kevineverywhere.github.io/bob-angular/">bob-angular</a>, an angular-three.js seed, can be seen in a sample application <a href="http://bob-angular.herokuapp.com/">here</a>. 
 </p>
+<p><a href="learning.html">NEW! Training Materials</a> for bob-angular. First two chapters online now. Video and additional chapters coming soon.
+</p>
 <p>The github files include package.json and bower.json for installing required libraries, as well as karma unit tests and protractor e2e tests. The application itself uses angular, three, less, bootstrap, jquery, d3, leaflet, and other libraries to enable the mapping of 2d Web to 3d surfaces. 
 </p>
 <p>
