Initial training materials for bob-angular.

--- a/learning.html
+++ b/learning.html
@@ -73,7 +73,7 @@
         <h4>Application: Client and Client-Server</h4>
         <ul>
           <li>Develop a complex angular application</li>
-          <li>Use three.js to enable the mapping of 2d content to 3d placememnt</li>
+          <li>Use three.js to enable the mapping of 2d content to 3d placement</li>
           <li>Integrate a number of APIs and Technologies with angular and three including
             <ul>
               <li>Bootstrap, because you already use it</li>
